# Splendor_DUEL

./: .gitignore  mcd.puml  mcd_ui.puml  mld.puml  rapport3.docx  rapport_final.docx  ~$pport_final.docx  ~WRL0064.tmp
SplendorDuel/: AI.cpp  AI.h  Action.h  BackgroundWidgetUI.h  Bag.cpp  Bag.h  Board.cpp  Board.h  Board.h~RF14e911b.TMP  BoardCard.cpp  BoardCard.h  BoardCompleteUI.cpp  BoardCompleteUI.h  BoardUI.cpp  BoardUI.h  CMakeLists.txt  Card.cpp  Card.h  CardContainersGUI.h  CardEffect.h  CardEffectPlayAgain.cpp  CardEffectPlayAgain.h  CardEffectTakePrivilege.cpp  CardEffectTakePrivilege.h  CardUI.cpp  CardUI.h  CompleteBoardUI.cpp  CompleteBoardUI.h  ConfirmationPushButtonUI.cpp  ConfirmationPushButtonUI.h  DrawPile.cpp~RF3b29b535.TMP  DrawPile.h  FinPartie.cpp  GameFactory.cpp  GameFactory.h  GameHandler.cpp  GameHandler.h  Gemmes.cpp  Gemmes.h  GemmesContainerGUI.h  (+50 more)
SplendorDuel/res/: cards.xml  message.xml  savefile.xml
SplendorDuel/x64/Debug/SplendorDuel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SplendorDuel.lastbuildstate  SplendorDuel.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog
SplendorDuel/x64/Debug/moc/: moc_SplendorDuel.cpp
SplendorDuel/x64/Debug/qmake/temp/: 435DBDEA-93EA-4E34-9BC2-30133F94EE71.SplendorDuel.designtime.idx  qtvars.vcxproj  qtvars_x64_Debug.props
SplendorDuel/x64/Debug/uic/: ui_SplendorDuel.h
enc_temp_folder/268b49997834e7cef52bc0c8f4398c93/: BoardUI.cpp
enc_temp_folder/6a9cebc39de4aeb1feea58d5acb716ed/: PlayerPoints.cpp
(+3 files in other folders)
